--- a/Funcional/Exercicio 6/questao_1a30.ipynb
+++ b/Funcional/Exercicio 6/questao_1a30.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,14 +146,307 @@
     "def indices_pares(lista):\n",
     "    return [x for x in lista[::2]]\n",
     "\n",
-    "print(indices_pares([4,3,7,1,2,9]))\n",
-    "\n"
+    "print(indices_pares([4,3,7,1,2,9]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "7. Defina a função triangulo que recebe como argumento um número natural n e devolve uma lista\n",
+    "em que o primeiro elemento é a lista [1], o segundo elemento é a lista [1, 2] e assim\n",
+    "sucessivamente até n.\n",
+    "Exemplo: triangulo(4) = [[1], [1, 2], [1, 2, 3], [1, 2, 3, 4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1], [1, 2], [1, 2, 3], [1, 2, 3, 4], [1, 2, 3, 4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def triangulo(n):\n",
+    "    return [[x+1 for x in list(range(i+1))] for i in list(range(n))]\n",
+    "print(triangulo(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Defina a função prod_lista que recebe como argumento uma lista de números inteiros e devolve\n",
+    "o produto dos seus elementos.\n",
+    "Exemplo: prod_lista([2,4,6]) = 48\n",
+    "prod_lista([]) = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prod_lista(lista):\n",
+    "    if not lista: return 1\n",
+    "    return reduce(lambda x,y: x*y,lista)\n",
+    "print(prod_lista([2,4,6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. Defina a função conta que recebe como argumentos uma lista de números inteiros w e um\n",
+    "número inteiro x e devolve o número de ocorrências de x em w.\n",
+    "Exemplo: conta([1,2,3,2,1,2],1) = 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aux_conta(lista):\n",
+    "    return reduce(lambda x,y:x+y,lista)\n",
+    "def conta_lista(lista,num):\n",
+    "    return aux_conta([1 if x==num else 0 for x in lista])\n",
+    "print(conta_lista([1,2,3,2,1,2],3))    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Defina a função contem_parQ que recebe como argumento uma lista de números inteiros w e\n",
+    "devolve True se w contém um número par e False em caso contrário.\n",
+    "Exemplo: contem_parQ([3,5,7,9,11]) = False\n",
+    "contem_parQ([3,4,7,9,11]) = True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aux_contem_par(lista):\n",
+    "    if len(lista)== 0: return False\n",
+    "    if lista[0] == True: return True\n",
+    "    return aux_contem_par(lista[1:])\n",
+    "\n",
+    "def contem_parQ(lista):\n",
+    "    return aux_contem_par([True if x%2==0 else False for x in lista])\n",
+    "\n",
+    "def contem_parQ2(lista):\n",
+    "    if len(lista) == 0: return False\n",
+    "    if lista[0]%2 == 0: return True\n",
+    "    return contem_parQ(lista[1:])\n",
+    "\n",
+    "print(contem_parQ([3,1,7,9,11]))\n",
+    "print(contem_parQ2([3,2,7,9,11]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11. Defina a função todos_imparesQ que recebe como argumento uma lista de números inteiros w e\n",
+    "devolve True se w contém apenas números ímpares e False em caso contrário.\n",
+    "Exemplo: todos_imparesQ([3,5,7,9,11]) = True\n",
+    "todos_imparesQ([3,4,7,9,11]) = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#INCOMPLETO POIS SE A LISTA FOR VAZIA ELA RETORNA TRUE\n",
+    "def todos_imparesQ(lista):\n",
+    "    if len(lista) == 0: return True\n",
+    "    if lista[0]%2 != 0: return todos_imparesQ(lista[1:])\n",
+    "    else: return False\n",
+    "    \n",
+    "print(todos_imparesQ([3,13,7,9,11]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "12. Defina a função pertenceQ que recebe como argumentos uma lista de números inteiros w e um\n",
+    "número inteiro n e devolve True se n ocorre em w e False em caso contrário.\n",
+    "Exemplo: pertenceQ([1,2,3,4],5) = False\n",
+    "pertenceQ([1,2,3,4],5) = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pertenceQ(lista,num):\n",
+    "    if len(lista) == 0: return False\n",
+    "    if lista[0] == num: return True\n",
+    "    return pertenceQ(lista[1:],num)\n",
+    "\n",
+    "print(pertenceQ([1,2,3,4],4))\n",
+    "print(pertenceQ([1,2,3,4],5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13. Defina a função int_listaQ que recebe como argumento uma lista e devolve True se a lista for\n",
+    "constituída exclusivamente por números inteiros e False em caso contrário.\n",
+    "Exemplo: int_listaQ([1,2,-3,4,9]) = True\n",
+    "int_listaQ([1.1,3,-3]) = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def int_listaQ(lista):\n",
+    "    if len(lista) == 0: return True\n",
+    "    if type(lista[0]) == (float): return False\n",
+    "    return int_listaQ(lista[1:])\n",
+    "    \n",
+    "\n",
+    "print(int_listaQ([1,2,-3.1,4,9]))\n",
+    "print(int_listaQ([1,2,-3,4,9]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "14. Defina a função nat_listaQ que recebe como argumento uma lista e devolve True se a lista for\n",
+    "constituída exclusivamente por números naturais e False em caso contrário.\n",
+    "Exemplo: nat_listaQ([1,2,3,-1]) = False\n",
+    "natt_listaQ([1,2,3,4]) = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nat_listaQ(lista):\n",
+    "    if len(lista) == 0: return True\n",
+    "    if lista[0] < 0: return False\n",
+    "    return nat_listaQ(lista[1:])\n",
+    "    \n",
+    "\n",
+    "print(nat_listaQ([1,2,-3,4,9]))\n",
+    "print(nat_listaQ([1,2,3,4,9]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "15. Defina a função int_lista_listaQ que recebe como argumento uma lista e devolve True se a lista\n",
+    "for constituída exclusivamente por listas de números inteiros e False em caso contrário.\n",
+    "Exemplo: int_lista_listaQ([[1,2,3],[4,5,6]]) = True\n",
+    "int_lista_listaQ([[1,2,3],[\"ola\",3]]) = False\n",
+    "int_lista_listaQ([1,[1,2,3],[4,5,6]]) = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aux_lista(lista):\n",
+    "    if len(lista) == 0: return True\n",
+    "    if type(lista[0]) != (int): return False\n",
+    "    return aux_lista(lista[1:])\n",
+    "\n",
+    "def int_lista_listaQ(lista):\n",
+    "    if len(lista) == 0: return True\n",
+    "    if aux_lista(lista[0]) == False: return False\n",
+    "    return int_lista_listaQ(lista[1:])\n",
+    "\n",
+    "print(int_lista_listaQ([[]]))    "
+   ]
   },
   {
    "cell_type": "code",
