Feito até a 26 menos a 17

--- a/Funcional/Exercicio 6/questao_1a30.ipynb
+++ b/Funcional/Exercicio 6/questao_1a30.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "def inverte_lista(lista):\n",
     "    return [x for x in reversed(lista)]\n",
@@ -423,18 +432,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
       "True\n"
      ]
     }
    ],
    "source": [
+    "#***#\n",
     "def aux_lista(lista):\n",
     "    if len(lista) == 0: return True\n",
     "    if type(lista[0]) != (int): return False\n",
@@ -445,7 +456,284 @@
     "    if aux_lista(lista[0]) == False: return False\n",
     "    return int_lista_listaQ(lista[1:])\n",
     "\n",
-    "print(int_lista_listaQ([[]]))    "
+    "print(int_lista_listaQ([[\"ola\"]]))\n",
+    "print(int_lista_listaQ([[1,2,3],[4,5,6]]))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "16. Defina a função escolhe_pares que recebe como argumento uma lista de números inteiros w e\n",
+    "devolve a lista dos elementos pares de w.\n",
+    "Exemplo: escolhe_pares([1,2,3,4,5,6,7,8]) = [2, 4, 6, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def escolhe_pares(lista):\n",
+    "    return list(filter(lambda x: x%2==0,lista))\n",
+    "print(escolhe_pares([1,2,3,4,5,6,7,8]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "17. Defina a função int_matrizQ que recebe como argumento uma lista m e devolve True se m for\n",
+    "uma matriz de números inteiros e False em caso contrário.\n",
+    "Exemplo: int_matrizQ([[1,2],[4,5],[7,8]]) = True\n",
+    "int_matrizQ([[1,2],[4],[7,8]]) = False\n",
+    "int_matrizQ([[1,2],[4],7]) = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#***#\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "18. Defina a função retira_negativos que recebe como argumento uma lista de números inteiros e\n",
+    "devolve a lista resultante de retirar todos os números negativos.\n",
+    "Exemplo: retira_negativos([1,2,3,-4,5,-6]) = [1, 2, 3, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def retira_negativos(lista):\n",
+    "    return list(filter(lambda x: x>=0,lista))\n",
+    "print(retira_negativos([1,2,3,-4,5,-6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "19. Defina a função div que recebe como argumentos dois números naturais m e n e devolve o\n",
+    "resultado da divisão inteira de m por n. Neste exercício não pode recorrer às operações\n",
+    "aritméticas de multiplicação, divisão e resto da divisão inteira.\n",
+    "Exemplo: div(7,2) = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def div(m,n):\n",
+    "    return (int)(m/n)\n",
+    "print(div(7,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20. Defina a função prim_alg que recebe como argumento um número natural n e devolve o\n",
+    "primeiro algarismo (o mais significativo) na representação decimal de n.\n",
+    "Exemplo: prim_alg(8935) = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prim_alg(m):\n",
+    "    return int(str(m)[0])\n",
+    "print(prim_alg(8648))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "21. Defina a função media_digitos que recebe como argumento um número natural e devolve a\n",
+    "média dos seus dígitos.\n",
+    "Exemplo: media_digitos(14276) = 4.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aux_media_digitos(n):\n",
+    "    return reduce(lambda x,y:x+y,[int(x) for x in n]) \n",
+    "def media_digitos(n):\n",
+    "    return float(int(aux_media_digitos(str(n))))/len(str(n))\n",
+    "print(media_digitos(14276))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "22. Defina a função permutacao que recebe como argumentos duas listas w1 e w2 e devolve True se\n",
+    "w2 for permutação de w1, e devolve False em caso contrário.\n",
+    "Exemplo: permutacao([1,2,3],[3,2,1]) = True\n",
+    "permutacao([1,1,2,3],[3,2,1]) = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#FUNACAO INVESTE_LISTA2 UTILIZADA DA QUESTAO 5\n",
+    "def inverte_lista2(lista):\n",
+    "    if len(lista) <= 1: return lista\n",
+    "    return lista[-1:] + inverte_lista2(lista[:-1])\n",
+    "\n",
+    "def permutacao(lista1,lista2):\n",
+    "    if lista1 == inverte_lista2(lista2): return True\n",
+    "    else: return False\n",
+    "print(permutacao([1,2,3],[3,2,1]))\n",
+    "print(permutacao([1,1,2,3],[3,2,1]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "23. Defina função comprimento que recebe como argumento uma lista e devolve o seu\n",
+    "comprimento. Não pode, como é óbvio, recorrer à função len.\n",
+    "Exemplo: comprimento([2,3,5,2,2]) = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def comprimento(lista):\n",
+    "    return reduce(lambda x,y:x+y,[1 for x in lista])\n",
+    "print(comprimento([2,3,5,2,2]))\n",
+    "print(comprimento(list(range(0,100))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "24. Defina a função intercala que recebe como argumentos duas listas w1 e w2 e devolve a lista\n",
+    "resultante de intercalar os elementos de w1 com os de w2.\n",
+    "Exemplo: intercala([1,3,5],[2,4,6]) = [1, 2, 3, 4, 5, 6]\n",
+    "intercala([1,3,5,7],[2]) = [1, 2, 3, 5, 7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Caio Grimm\\OneDrive\\Área de Trabalho\\Paradigmas-LP\\Funcional\\Exercicio 6\\questao_1a30.ipynb Célula: 49\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mintercala\u001b[39m(lista1,lista2):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=11'>12</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m [i \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mmap\u001b[39m(lista1,lista2) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m j]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(intercala([\u001b[39m1\u001b[39;49m,\u001b[39m3\u001b[39;49m,\u001b[39m5\u001b[39;49m],[\u001b[39m2\u001b[39;49m,\u001b[39m4\u001b[39;49m,\u001b[39m6\u001b[39;49m]))\n",
+      "\u001b[1;32mc:\\Users\\Caio Grimm\\OneDrive\\Área de Trabalho\\Paradigmas-LP\\Funcional\\Exercicio 6\\questao_1a30.ipynb Célula: 49\u001b[0m in \u001b[0;36mintercala\u001b[1;34m(lista1, lista2)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mintercala\u001b[39m(lista1,lista2):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=11'>12</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m [i \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mmap\u001b[39m(lista1,lista2) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m j]\n",
+      "\u001b[1;32mc:\\Users\\Caio Grimm\\OneDrive\\Área de Trabalho\\Paradigmas-LP\\Funcional\\Exercicio 6\\questao_1a30.ipynb Célula: 49\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mintercala\u001b[39m(lista1,lista2):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=11'>12</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m [i \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mmap\u001b[39m(lista1,lista2) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m j]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "def intercala(lista1,lista2):\n",
+    "    if len(lista1) <= 1: return lista1\n",
+    "    return str(lista1[0]) + str(lista2[0]) + intercala(lista1[1:],lista2[1:])\n",
+    "# nome = [1,2,3]\n",
+    "# nome2 = 'jose'\n",
+    "# print(type(str(nome[0])))\n",
+    "# print(nome[0])\n",
+    "#soma = nome[0] + nome2[0] \n",
+    "#print(soma)\n",
+    "\n",
+    "print(intercala([1,3,5],[2,4,6]))\n",
+    "\n"
    ]
   },
   {
@@ -458,7 +746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -472,12 +760,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "898e58e1e32941f56aba553d48693483bb9c026c2e5881ea5f73578134edad48"
+    "hash": "92e82b21127327d82829ed7f76f9e53ce4c7958c1603e5fc3050fb0080c6224d"
    }
   }
  },
