--- a/Funcional/Exercicio 6/questao_1a30.ipynb
+++ b/Funcional/Exercicio 6/questao_1a30.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
     "def soma_nat(n):\n",
     "    return reduce(lambda x,y: x+y,list(range(1,n+1)))\n",
@@ -41,9 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "def lista_quadrados(n):\n",
     "    return list(map(lambda x: x**2,list(range(1,n+1))))\n",
@@ -61,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 16, 9, 4, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "def lista_quadrados_inv(n):\n",
     "    return list(map(lambda x: x**2,list(range(n,0,-1))))\n",
@@ -85,9 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def is_perf(n):\n",
     "    return [x for x in list(range(n-1,0,-1)) if n%x==0]\n",
@@ -112,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -148,9 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 7, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "def indices_pares(lista):\n",
     "    return [x for x in lista[::2]]\n",
@@ -199,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    }
+   ],
    "source": [
     "def prod_lista(lista):\n",
     "    if not lista: return 1\n",
@@ -220,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -704,36 +752,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Caio Grimm\\OneDrive\\Área de Trabalho\\Paradigmas-LP\\Funcional\\Exercicio 6\\questao_1a30.ipynb Célula: 49\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mintercala\u001b[39m(lista1,lista2):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=11'>12</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m [i \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mmap\u001b[39m(lista1,lista2) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m j]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(intercala([\u001b[39m1\u001b[39;49m,\u001b[39m3\u001b[39;49m,\u001b[39m5\u001b[39;49m],[\u001b[39m2\u001b[39;49m,\u001b[39m4\u001b[39;49m,\u001b[39m6\u001b[39;49m]))\n",
-      "\u001b[1;32mc:\\Users\\Caio Grimm\\OneDrive\\Área de Trabalho\\Paradigmas-LP\\Funcional\\Exercicio 6\\questao_1a30.ipynb Célula: 49\u001b[0m in \u001b[0;36mintercala\u001b[1;34m(lista1, lista2)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mintercala\u001b[39m(lista1,lista2):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=11'>12</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m [i \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mmap\u001b[39m(lista1,lista2) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m j]\n",
-      "\u001b[1;32mc:\\Users\\Caio Grimm\\OneDrive\\Área de Trabalho\\Paradigmas-LP\\Funcional\\Exercicio 6\\questao_1a30.ipynb Célula: 49\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=10'>11</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mintercala\u001b[39m(lista1,lista2):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Caio%20Grimm/OneDrive/%C3%81rea%20de%20Trabalho/Paradigmas-LP/Funcional/Exercicio%206/questao_1a30.ipynb#ch0000053?line=11'>12</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m [i \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mmap\u001b[39m(lista1,lista2) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m j]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 5, 7]\n"
      ]
     }
    ],
    "source": [
+    "def aux_intercala(lista1,lista2):\n",
+    "    if (len(lista1) >= len(lista2)): return lista1\n",
+    "    else: return lista2\n",
+    "    \n",
     "def intercala(lista1,lista2):\n",
-    "    if len(lista1) <= 1: return lista1\n",
-    "    return str(lista1[0]) + str(lista2[0]) + intercala(lista1[1:],lista2[1:])\n",
-    "# nome = [1,2,3]\n",
-    "# nome2 = 'jose'\n",
-    "# print(type(str(nome[0])))\n",
-    "# print(nome[0])\n",
-    "#soma = nome[0] + nome2[0] \n",
-    "#print(soma)\n",
+    "    if len(aux_intercala(lista1,lista2)) <= 0: return aux_intercala(lista1,lista2)\n",
+    "    return lista1[:1] + lista2[:1] + intercala(lista1[1:],lista2[1:])\n",
     "\n",
     "print(intercala([1,3,5],[2,4,6]))\n",
-    "\n"
+    "print(intercala([1,3,5,7],[2]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "25. Defina a função apaga que recebe como argumentos uma lista de inteiros w e um número\n",
+    "inteiro k e devolve a lista que resulta de apagar de w todas as ocorrências de k.\n",
+    "Exemplo: apaga([1,2,1,3,1,4,1,5],1) = [2, 3, 4, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def apaga(lista,num):\n",
+    "    return [x for x in lista if x != num]\n",
+    "\n",
+    "print(apaga([1,2,1,3,1,4,1,5],1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "26. Defina a função maximo que recebe como argumento uma lista não vazia de números inteiros e\n",
+    "devolve o seu máximo.\n",
+    "Exemplo: maximo([14,-1,5,19,0]) = 19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aux_maximo(lista,len,indice):\n",
+    "    if len == 0: return lista[indice]\n",
+    "    else:\n",
+    "        if lista[len-1] > lista[indice]: return aux_maximo(lista,len-1,len-1)\n",
+    "        else: return aux_maximo(lista,len-1,indice)\n",
+    "def maximo(lista):\n",
+    "    return aux_maximo(lista,len(lista),0)\n",
+    "\n",
+    "print(maximo([14,-1,5,19,0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "27. Defina a função lposicoes que recebe como argumentos uma lista de números inteiros w e um\n",
+    "número inteiro k e devolve a lista das posições em que k ocorre em w.\n",
+    "Exemplo: lposicoes([1,2,3,4,12,2,4,3,2],2) = [1, 5, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def lposicoes(lista,n):\n",
+    "#     if not lista: return 0\n",
+    "#     c = 1 if lista[0] == n else 0\n",
+    "#     return c + lposicoes(lista[1:],n)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "28. Defina a função pos_max que recebe como argumento uma lista de números inteiro e devolve a\n",
+    "lista das posições onde ocorre o máximo da lista.\n",
+    "Exemplo: pos_max([1,2,3,1,2,3]) = [2, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "29. Defina a função ind_pares que recebe como argumento uma lista de listas de números inteiros\n",
+    "w={w1,...,wn} e devolve a lista r={r1,...,rn} em que ri é composta pelas posições dos números\n",
+    "pares em wi.\n",
+    "Exemplo: pos_pares([[1,2,3],[4,5,6],[7,8,9,10]]) = [[1], [0, 2], [1, 3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "30. Defina a função fibonacci que recebe como argumento um número natural n e devolve o\n",
+    "n-ésimo número da sucessão de Fibonacci. Recorde que a sucessão dos números de Fibonacci é\n",
+    "definida recursivamente como se segue: fibonacci(1)=1; fibonacci(2)=1; fibonacci(n+2)=\n",
+    "fibonacci(n+1)+ fibonacci(n)\n",
+    "Exemplo: fibonacci(1) = 1\n",
+    "fibonacci(2) = 1\n",
+    "fibonacci(3) = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n==0: return 1\n",
+    "    if n==1: return 1\n",
+    "    return fibonacci(n-1)+fibonacci(n-2)\n",
+    "print(fibonacci(0))\n",
+    "print(fibonacci(1))\n",
+    "print(fibonacci(2))\n",
+    "print(fibonacci(3))\n",
+    "print(fibonacci(4))\n",
+    "print(fibonacci(5))\n"
    ]
   },
   {
